<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="description">back</string>
    <string name="shareLink">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="title">Поделиться приложением :</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eMail">k4n.vika@yandex.ru</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью</string>
    <string name="additional_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="uSearched">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name ="start">00:00</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиcта</string>
    <string name="tab_likes">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="input_name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="save">Создать</string>
    <string name="bottom_sheet_name">Добавить в плейлист</string>
    <string name="save_data">Все несохраненные данные будут потеряны</string>
    <string name="deny">Отменить</string>
    <string name="finish">Завершить</string>
    <string name="playlist">Плейлист </string>
    <string name="created"> создан</string>
    <string name="delete_track"> Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="share_in_playlist">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete">Хотите удалить плейлист</string>
    <string name="save_playlist_edits">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="no_tracks_in_plst">В плейлисте нет треков</string>
</resources>