<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorPrimary"
    >

        <TextView
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingBottom="28dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearch"
            android:text="@string/search"
            app:icon="@drawable/light_mode"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/buttonMedia"
            android:text="@string/media"
            app:icon="@drawable/media"
            style="@style/ButtonStyle"/>


        <Button
            android:id="@+id/buttonSetting"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</LinearLayout>