<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="52dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:text="@string/dark_theme"
            style="@style/SettingsStyle"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switcher"
            tools:text="Темная тема"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"/>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/share"
        >

        <TextView
            android:text="@string/share"
            style="@style/SettingsStyle"/>


        <ImageView
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/share"
            android:paddingHorizontal="4dp"
            android:paddingVertical="3dp"
            android:src="@drawable/share"
            style="@style/ImageSettingsStyle"
            app:tint="?attr/colorSecondary" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/support">

        <TextView
            android:text="@string/support"
            style="@style/SettingsStyle"/>

        <ImageView
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/support"
            android:src="@drawable/group"
            app:tint="?attr/colorSecondary"
            style="@style/ImageSettingsStyle"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agreement">

        <TextView
            android:text="@string/agreement"
            style="@style/SettingsStyle"/>


        <ImageView
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/agreement"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:src="@drawable/arrow"
            app:tint="?attr/colorSecondary"
            style="@style/ImageSettingsStyle"/>


    </FrameLayout>

</LinearLayout>
