<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="52dp">


        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:contentDescription="@string/description"
            android:src="@drawable/vector"
            app:iconGravity="start" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginStart="@dimen/marginStart"
            android:text="@string/dark_theme"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />


        <Switch
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginStart="@dimen/marginStart"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginBottom="@dimen/icon_margin_bottom"
            android:paddingHorizontal="4dp"
            android:paddingVertical="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:contentDescription="@string/share" />

        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginStart="@dimen/marginStart"
            android:text="@string/support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginBottom="@dimen/icon_margin_bottom"
            android:paddingHorizontal="2dp"
            android:paddingTop="3.1dp"
            android:paddingBottom="2.9dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group"
                android:contentDescription="@string/support" />

        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginStart="@dimen/marginStart"
            android:text="@string/agreement"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginBottom="@dimen/icon_margin_bottom"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:contentDescription="@string/agreement" />

        </FrameLayout>

    </FrameLayout>

</LinearLayout>
