<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="52dp">


        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:contentDescription="@string/description"
            android:src="@drawable/vector"
            app:iconGravity="start"
            app:tint="?attr/colorOnPrimary"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />
            <ImageView
                android:id="@+id/add_cover"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toEndOf="@+id/leftBorder"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/add_cover" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:maxLength="30"
                android:maxLines="1"
                app:boxStrokeColor="@color/color_input"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                android:hint="@string/input_name_playlist"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textFontWeight="400"
                android:fontFamily="@font/ys_display_regular"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/add_cover"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/color_input"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                android:layout_marginTop="16dp"
                android:hint="@string/description_playlist"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textFontWeight="400"
                android:fontFamily="@font/ys_display_regular"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/input_title1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_create"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/leftBorder"
                        app:layout_constraintEnd_toStartOf="@id/rightBorder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/input_description"
                        android:enabled="false"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_create_pllst"
                        android:textAllCaps="false"
                        android:textFontWeight="500"
                        android:fontFamily="@font/ys_display_medium"
                        android:textSize="16sp"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="170dp"
                        android:layout_marginHorizontal="1dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
