<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pl_bottom_sheet"
    android:elevation="0dp"
    android:outlineProvider="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_shape"
    android:backgroundTint="?attr/colorPrimaryVariant"
    app:behavior_hideable="true"
    app:behavior_peekHeight="300dp"
    app:layout_constraintCircleRadius="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:paddingBottom="16dp"
    android:theme="@style/Theme.PlaylistMaker">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/pip"
        android:layout_gravity="center"/>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingVertical="@dimen/view_vertical_padding"
        android:paddingHorizontal="@dimen/view_padding"
        android:orientation="horizontal"
        android:background="?attr/colorPrimaryVariant"
        android:theme="@style/Theme.PlaylistMaker">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/playlistImg"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:src="@drawable/placeholder"/>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/view_vertical_padding"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/playlistName"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TrackView"
                tools:text="Название плейлиста"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/count_playlists"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TrackViewSmall"
                    android:layout_weight="1"
                    tools:text="число треков"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/share"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="16dp"
        android:text="@string/share_in_playlist"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"/>
    <TextView
        android:id="@+id/edit_playlist"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="16dp"
        android:text="@string/edit_playlist_info"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"/>
    <TextView
        android:id="@+id/delete_playlist"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="16dp"
        android:text="@string/delete_playlist"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
</LinearLayout>

